# retch

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE  NOTES.md  README.md  SECURITY.md  flake.nix
.cargo/: audit.toml
.claude/: settings.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: benchmark.yml  claude-code-review.yml  claude.yml  packaging.yml  rust.yml  security.yml
assets/logos/: arch.txt  debian.txt  endeavouros.txt  fedora.txt  macos.txt  nixos.txt  opensuse.txt  pop.txt  tux.txt  ubuntu.txt  windows.txt
benches/: benchmarks.rs
crates/battery/: Cargo.toml  README.md
crates/sysinfo/: Cargo.toml  build.rs
crates/sysinfo/src/: audio.rs  battery.rs  bios.rs  bluetooth.rs  btrfs.rs  camera.rs  disk.rs  display.rs  fetch.rs  gamepad.rs  gpu.rs  lib.rs  macos_ffi.rs  memory.rs  motherboard.rs  network.rs  packages.rs  shell.rs  terminal.rs  theme.rs  weather.rs  win_reg.rs  win_setupapi.rs  win_users.rs  wm.rs  zfs.rs
dev/bench/: data.js
docs/: retch.1  retch.1.md  retch.md
packaging/aur/: PKGBUILD
packaging/nixpkgs/: package.nix  test.nix
scripts/: calculate_nix_hashes.py  install_fastfetch.py  install_hooks.sh  install_hyperfine.py  nixpkgs_release.py  parse_criterion.py  reset_wip.py  tldr_release.py  update_wip.py  upload_local_bench.py
scripts/hooks/: post-merge  pre-push
src/: battery.rs  cli.rs  config.rs  display.rs  fetch.rs  fields.rs  gpu.rs  lib.rs  logo.rs  main.rs  theme.rs
tests/: cli_tests.rs
