[workspace]
members = [
    ".",
    "crates/sysinfo",
]

[package]
name = "retch-cli"
version = "0.3.29"
edition = "2021"
authors = ["Ken Tobias"]
description = "A fast, feature-rich system information fetcher written in Rust (similar to fastfetch or neofetch)"
license = "GPL-3.0"
repository = "https://github.com/l1a/retch"
readme = "README.md"
keywords = ["system", "fetch", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "retch"
path = "src/main.rs"

[dependencies]
retch-sysinfo = { path = "crates/sysinfo", version = "=0.1.29" }
clap = { version = "4.6", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "1.1"
clap_complete = "4.6"
clap_complete_nushell = "4.6"

dirs = "6.0"
anyhow = "1.0"
owo-colors = "4.0"
image = { version = "0.25", optional = true }
base64 = { version = "0.22", optional = true }
icy_sixel = { version = "0.5", optional = true }
terminal_size = "0.4"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
default = ["graphics"]
graphics = ["image", "base64", "icy_sixel"]

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false

[profile.profiling]
inherits = "release"
debug = true


