[package]
name = "retch-sysinfo"
version = "0.1.35"
edition = "2021"
authors = ["Ken Tobias"]
description = "System information gathering library for retch"
license = "GPL-3.0"
repository = "https://github.com/l1a/retch"

[dependencies]
sysinfo = { version = "0.39", features = ["component"] }
dirs = "6.0"
chrono = "0.4"
anyhow = "1.0"
owo-colors = "4.0"
rusqlite = { version = "0.40", features = ["bundled"] }
libc = "0.2"
serde_json = "1.0"
